bad/return_void_in_func_returning_bool.example_compiler_output
ERROR
[1mbad/return_void_in_func_returning_bool.lat:3:25: [1;31merror: [0;1mreturned value of type `void` is not convertible to return type `boolean`[m
boolean test() { return foo(); }
                        [1;32m^[m
